--- a/tkdemo/src/main/resources/application.properties
+++ b/tkdemo/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#mybatis 配置
+mybatis.type-aliases-package=com.jzj.tkdemo.domain.po
+#mapper 文件存放xml
+mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
+#启用驼峰规则将数据库 user_name 实体转化为userName
+mybatis.configuration.map-underscore-to-camel-case=true
 
+#数据源配置
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
